Enable Allure for integration tests

--- a/tox.ini
+++ b/tox.ini
@@ -95,10 +95,12 @@ commands =
 [testenv:integration]
 description = Run integration tests (placeholder)
 deps =
+    -r{toxinidir}/charm/requirements.txt
+    allure-pytest>=2.8.18
+    git+https://github.com/canonical/data-platform-workflows@v24.0.0\#subdirectory=python/pytest_plugins/allure_pytest_collection_report
     pytest
     pytest-asyncio
     pytest-operator
-    -r{toxinidir}/charm/requirements.txt
 commands =
     pytest -v --tb native \
         --log-cli-level=INFO -s {posargs} charm/tests/integration
