Update .trivyignore with additional CVEs
Added new CVEs related to stdlib to .trivyignore.

--- a/.trivyignore
+++ b/.trivyignore
@@ -8,3 +8,8 @@ CVE-2024-45337 # golang.org/x/crypto
 CVE-2025-22868 # golang.org/x/oauth2
 CVE-2025-22874 # crypto/x509 in pebble
 CVE-2025-47907 # stdlib in pebble and statsd_exporter
+# stdlib
+CVE-2025-58183
+CVE-2025-58186
+CVE-2025-58187
+CVE-2025-58188
