--- a/trivy.yaml
+++ b/trivy.yaml
@@ -3,5 +3,5 @@ scan:
   offline-scan: true
 image:
   skip-files:
-    - "usr/bin/pebble"
-    - "usr/bin/statsd_exporter"
+    - "**/pebble"
+    - "**/statsd_exporter"
