--- a/.trivyignore
+++ b/.trivyignore
@@ -2,5 +2,8 @@ CVE-2022-40897
 CVE-2024-6345
 CVE-2025-22869
 CVE-2025-47273
+# statsd-exporter
+CVE-2024-45337 # golang.org/x/crypto
+CVE-2025-22868 # golang.org/x/oauth2
 # stdlib
 CVE-2025-61729
